fixed left arrow and spacing on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -844,6 +844,11 @@ textarea {
   border-radius: 0 3px 3px 0;
   user-select: none;
 }
+/* Position the "prev button" to the left */
+.prev {
+  left: 0;
+  border-radius: 3px 0 0 3px;
+}
 
 /* Position the "next button" to the right */
 .next {
